--- a/styles/main.css
+++ b/styles/main.css
@@ -55,6 +55,7 @@
 }
 
 body {
+  position: relative;
   font-size: 1rem;
   font-family: "Montserrat", sans-serif;
   font-family: "Open Sans", sans-serif;
