--- a/styles/loader.css
+++ b/styles/loader.css
@@ -8,11 +8,11 @@
   justify-content: center;
   align-items: center;
   z-index: 200;
-  background: rgb(64, 0, 115);
+  background: var(--dark-purple);
   background: linear-gradient(
     90deg,
-    rgba(64, 0, 115, 1) 0%,
-    rgba(187, 95, 255, 1) 100%
+    var(--dark-purple) 0%,
+    var(--lighter-purple) 100%
   );
 }
 
