--- a/styles/album.css
+++ b/styles/album.css
@@ -47,6 +47,8 @@
 .track-grid {
   display: grid;
   align-items: center;
+  text-decoration: none;
+  color: inherit;
   grid-template-columns: 0.2fr 3fr 1fr 2fr;
   padding: 0.3em 1em;
   gap: 0.5em;
