--- a/styles/main.css
+++ b/styles/main.css
@@ -41,6 +41,7 @@
   --purple: #400073;
   --lighter-purple: #5c13b5;
   --light-purple: #d8a3ff;
+  --pink: #b941ff;
   --white-purple: #f2edf5;
   --white: #ffffff;
   --medium-green: #1db954;
