returned search btn

--- a/styles/search.css
+++ b/styles/search.css
@@ -9,7 +9,8 @@
 
 .filter-box {
   border: none;
-  padding: 0 0.7em;
+  padding: 0 1em;
+  padding-right: 0;
   border-radius: 0;
   padding-right: 0;
   background-color: var(--purple);
@@ -27,17 +28,13 @@
   color: var(--light-green);
 }
 
-.filter-box > * {
-  margin: 2em;
-}
 
 .searchInpt {
   flex: 1;
   border: 0;
   background-color: var(--white);
   color: var(--purple);
-  padding: 0.6em 1.3em;
-  padding-right: 0.5em;
+  padding: 0.6em .7em;
 }
 
 .searchInpt::placeholder {
@@ -50,6 +47,48 @@
   opacity: 0;
 }
 
+.submitBtn {
+  border: none;
+  padding: 0 1.2em;
+  font-size: 1.2rem;
+  color: var(--light-blue);
+  background-color: var(--purple);
+  position: relative;
+  --transition: all 0.2s ease-out;
+  -webkit-transition: var(--transition);
+  -moz-transition: var(--transition);
+  -o-transition: var(--transition);
+  -ms-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.submitBtn > * {
+  position: relative;
+  z-index: 2;
+}
+
+.submitBtn:hover {
+  color: var(--light-green);
+}
+
+.submitBtn::before {
+  visibility: hidden;
+  opacity: 0;
+  transition: inherit;
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.137);
+  z-index: 1;
+}
+
+.submitBtn:hover::before {
+  visibility: visible;
+  opacity: 1;
+}
 .info-grid {
   display: grid;
   grid-template-columns: repeat(
