--- a/styles/main.css
+++ b/styles/main.css
@@ -48,6 +48,7 @@
   --green: #1ed760;
   --light-green: #cbf55c;
   --light-green2: #bbff32;
+  --light-green3: #73ff54;
   --light-blue: #d7dbff;
   --black: #121212;
   --medium-black: #212121;
